istio-destination.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dogbreed-destination-rule
  namespace: sample
spec:
  host: dogbreed-service
  subsets:
  - name: v1
    labels:
      app: dogbreed
      version: v1
  - name: v2
    labels:
      app: dogbreed
      version: v2
